hphp/hack/test/typecheck/expression_trees/nested_expression_tree_lambda.php.exp
ERROR: File "nested_expression_tree_lambda.php", line 6, characters 28-40:
Expression trees may not be used directly inside of other expression trees. (Parsing[1002])
ERROR: File "nested_expression_tree_lambda.php", line 6, characters 28-40:
Invalid argument (Typing[4110])
  File "expr_tree.php", line 60, characters 21-26:
  Expected `string`
  File "expr_tree.php", line 212, characters 5-20:
    resulting from expanding the type constant `ExampleDsl::TAst`
  File "expr_tree.php", line 72, characters 8-53:
  But got `ExprTree<ExampleDsl, string, ExampleInt>`
